--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a0dcaa">  <td>23/10/26 15:38:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIRequestWITHBDD.getProductsTest()[pri:0, instance:com.rest.tests.GetAPIRequestWITHBDD@3d74bf60]">getProductsTest</td> 
-  <td>main@1108924067</td>   <td></td> </tr>
+<tr bgcolor="b7a896">  <td>23/10/27 17:35:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIWithPathParam.getAPIwithPathParamWith_DataProviderTest(java.lang.String,int)[pri:0, instance:com.rest.tests.GetAPIWithPathParam@61df66b6]">getAPIwithPathParamWith_DataProviderTest</td> 
+  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="b7a896">  <td>23/10/27 17:35:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIWithPathParam.getAPIwithPathParamWith_DataProviderTest(java.lang.String,int)[pri:0, instance:com.rest.tests.GetAPIWithPathParam@61df66b6]">getAPIwithPathParamWith_DataProviderTest</td> 
+  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="b7a896">  <td>23/10/27 17:35:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIWithPathParam.getAPIwithPathParamWith_DataProviderTest(java.lang.String,int)[pri:0, instance:com.rest.tests.GetAPIWithPathParam@61df66b6]">getAPIwithPathParamWith_DataProviderTest</td> 
+  <td>main@1092572064</td>   <td></td> </tr>
 </table>
