monday commit offi

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dhivy\AppData\Local\Temp\testng-eclipse-1241866789\testng-customsuite.xml</span>
+                    <span>C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1880179672\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.rest.post.CreateUserwithPojoTest" class="method navigator-link" hash-for-method="addUserTest">addUserTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.product.api.ProductAPIJSONJaywayTest" class="method navigator-link" hash-for-method="getProduct_BDD_Json_Jayway_Test">getProduct_BDD_Json_Jayway_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.rest.post.CreateUserwithPojoTest</span>
+              <span class="class-name">com.product.api.ProductAPIJSONJaywayTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addUserTest">
-                  </a> <!-- addUserTest -->
-                  <span class="method-name">addUserTest</span>
+                  <a name="getProduct_BDD_Json_Jayway_Test">
+                  </a> <!-- getProduct_BDD_Json_Jayway_Test -->
+                  <span class="method-name">getProduct_BDD_Json_Jayway_Test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dhivy\AppData\Local\Temp\testng-eclipse-1241866789\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1880179672\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.rest.post.CreateUserwithPojoTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;addUserTest&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.rest.post.CreateUserwithPojoTest --&gt;
+      &lt;class name=&quot;com.product.api.ProductAPIJSONJaywayTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,9 +187,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addUserTest')
-data.setCell(0, 2, 'com.rest.post.CreateUserwithPojoTest')
-data.setCell(0, 3, 2677);
+data.setCell(0, 1, 'getProduct_BDD_Json_Jayway_Test')
+data.setCell(0, 2, 'com.product.api.ProductAPIJSONJaywayTest')
+data.setCell(0, 3, 2416);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -224,9 +220,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.rest.post.CreateUserwithPojoTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.product.api.ProductAPIJSONJaywayTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">addUserTest</span>
+                <span class="method-name">getProduct_BDD_Json_Jayway_Test</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
