--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1880179672\testng-customsuite.xml</span>
+                    <span>C:\Users\karthise\AppData\Local\Temp\testng-eclipse-2064145128\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.product.api.ProductAPIJSONJaywayTest" class="method navigator-link" hash-for-method="getProduct_BDD_Json_Jayway_Test">getProduct_BDD_Json_Jayway_Test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.pet.api.CreatePetTest" class="method navigator-link" hash-for-method="postPetTest">postPetTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.product.api.ProductAPIJSONJaywayTest</span>
+              <span class="class-name">com.pet.api.CreatePetTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getProduct_BDD_Json_Jayway_Test">
-                  </a> <!-- getProduct_BDD_Json_Jayway_Test -->
-                  <span class="method-name">getProduct_BDD_Json_Jayway_Test</span>
+                  <a name="postPetTest">
+                  </a> <!-- postPetTest -->
+                  <span class="method-name">postPetTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1880179672\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthise\AppData\Local\Temp\testng-eclipse-2064145128\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.product.api.ProductAPIJSONJaywayTest&quot;/&gt;
+      &lt;class name=&quot;com.pet.api.CreatePetTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getProduct_BDD_Json_Jayway_Test')
-data.setCell(0, 2, 'com.product.api.ProductAPIJSONJaywayTest')
-data.setCell(0, 3, 2416);
+data.setCell(0, 1, 'postPetTest')
+data.setCell(0, 2, 'com.pet.api.CreatePetTest')
+data.setCell(0, 3, 3242);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,9 +220,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.product.api.ProductAPIJSONJaywayTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.pet.api.CreatePetTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getProduct_BDD_Json_Jayway_Test</span>
+                <span class="method-name">postPetTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
