--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb9da7">  <td>23/10/30 16:11:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductAPIJSONJaywayTest.getProduct_BDD_Json_Jayway_Test()[pri:0, instance:com.product.api.ProductAPIJSONJaywayTest@3427b02d]">getProduct_BDD_Json_Jayway_Test</td> 
-  <td>main@1104443373</td>   <td></td> </tr>
+<tr bgcolor="dd6edd">  <td>23/11/01 16:39:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatePetTest.postPetTest()[pri:0, instance:com.pet.api.CreatePetTest@2f7298b]">postPetTest</td> 
+  <td>main@728885526</td>   <td></td> </tr>
 </table>
