--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e767f3">  <td>23/11/03 17:22:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetCircuitXMLAPITest.xmlTest()[pri:0, instance:xml.GetCircuitXMLAPITest@6e171cd7]">xmlTest</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
+<tr bgcolor="9160aa">  <td>23/11/10 15:22:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductAPITest.postProductTest()[pri:0, instance:com.product.api.ProductAPITest@15043a2f]">postProductTest</td> 
+  <td>main@2109839984</td>   <td></td> </tr>
+<tr bgcolor="9160aa">  <td>23/11/10 15:22:09</td>   <td>-2478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductAPITest.getproductTest()[pri:0, instance:com.product.api.ProductAPITest@15043a2f]">getproductTest</td> 
+  <td>main@2109839984</td>   <td></td> </tr>
 </table>
