--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1695700191\testng-customsuite.xml</span>
+                    <span>C:\Users\karthise\AppData\Local\Temp\testng-eclipse-1247404275\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="xml.GetCircuitXMLAPITest" class="method navigator-link" hash-for-method="xmlTest">xmlTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.product.api.ProductAPITest" class="method navigator-link" hash-for-method="getproductTest">getproductTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.product.api.ProductAPITest" class="method navigator-link" hash-for-method="postProductTest">postProductTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">xml.GetCircuitXMLAPITest</span>
+              <span class="class-name">com.product.api.ProductAPITest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="xmlTest">
-                  </a> <!-- xmlTest -->
-                  <span class="method-name">xmlTest</span>
+                  <a name="getproductTest">
+                  </a> <!-- getproductTest -->
+                  <span class="method-name">getproductTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="postProductTest">
+                  </a> <!-- postProductTest -->
+                  <span class="method-name">postProductTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthise\AppData\Local\Temp\testng-eclipse--1695700191\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthise\AppData\Local\Temp\testng-eclipse-1247404275\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;xml.GetCircuitXMLAPITest&quot;/&gt;
+      &lt;class name=&quot;com.product.api.ProductAPITest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'xmlTest')
-data.setCell(0, 2, 'xml.GetCircuitXMLAPITest')
-data.setCell(0, 3, 2807);
+data.setCell(0, 1, 'getproductTest')
+data.setCell(0, 2, 'com.product.api.ProductAPITest')
+data.setCell(0, 3, 2401);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'postProductTest')
+data.setCell(1, 2, 'com.product.api.ProductAPITest')
+data.setCell(1, 3, 1450);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,10 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">xml.GetCircuitXMLAPITest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.product.api.ProductAPITest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">xmlTest</span>
+                <span class="method-name">getproductTest</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">postProductTest</span>
+                <span class="method-start">2478 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
